syntax = "proto3";
package pb;
option go_package = "./pb";

enum MessageType  {
  HEART_BEAT = 0;
  ONLINE = 1;
  LIST_USERS = 2;
  SEND_MESSAGE = 3;
  OFFLINE = 4;
  RECEIVE_MESSAGE = 5;
}

enum MessageState {
  Sent = 0;
  DELIVERED = 1;
  Seen = 2;
}